Reverting appsettings change

--- a/SportsbookAggregationAPI/appsettings.json
+++ b/SportsbookAggregationAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SportsbookDatabase": "server=localhost;port=3307;database=sportsbookagg;uid=matt;password=baseball1;oldguids=true"
+    "SportsbookDatabase": "server=204.48.16.30;port=3306;database=SportsbookAggregation;uid=appuser;password=69MattNick;oldguids=true"
   },
   "AllowedHosts": "*"
 }
