--- a/SportsbookAggregationAPI/SportsbookAggregationAPI.csproj
+++ b/SportsbookAggregationAPI/SportsbookAggregationAPI.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+      <PackageReference Include="Okta.AspNetCore" Version="3.4.0" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.3" />
     </ItemGroup>
 
