--- a/SportsbookAggregationAPI/SportsbookAggregationAPI.csproj
+++ b/SportsbookAggregationAPI/SportsbookAggregationAPI.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FuzzySharp" Version="2.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
       <PackageReference Include="Okta.AspNetCore" Version="3.4.0" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.3" />
