update fuzzy number

--- a/SportsbookAggregationAPI/appsettings.json
+++ b/SportsbookAggregationAPI/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "SportsbookDatabase": "server=204.48.16.30;port=3306;database=SportsbookAggregation;uid=appuser;password=69MattNick;oldguids=true"
-  },
+    "ConnectionStrings": {
+        "SportsbookDatabase": "server=localhost;user id=NickMatt;password=MattNick69!;database=sportsagg;persistsecurityinfo=True;oldguids=true;"
+    },
   "AllowedHosts": "*"
 }
