--- a/SportsbookAggregationAPI/appsettings.Development.json
+++ b/SportsbookAggregationAPI/appsettings.Development.json
@@ -1,13 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "SendTexts": false,
+    "OutputToConsole": true,
     "ConnectionStrings": {
         "SportsbookDatabase": "server=localhost;user id=NickMatt;password=MattNick69!;database=sportsagg;persistsecurityinfo=True;oldguids=true;"
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*"
 }
